--- a/client-service/package.json
+++ b/client-service/package.json
@@ -25,5 +25,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1"
+  },
+  "dependencies": {
+    "fastify": "^5.4.0"
   }
 }
