--- a/client-service/package.json
+++ b/client-service/package.json
@@ -21,12 +21,14 @@
     "globals": "^16.2.0",
     "jest": "^30.0.2",
     "nodemon": "^3.1.10",
+    "prisma": "^6.10.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1"
   },
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "fastify": "^5.4.0"
   }
 }
