--- a/client-service/package.json
+++ b/client-service/package.json
@@ -7,10 +7,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts --no-error-on-unmatched-pattern",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest"
   },
@@ -24,11 +24,15 @@
     "prisma": "^6.10.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1"
+    "typescript-eslint": "^8.34.1",
+    "pino-pretty": "^13.0.0"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "pino": "^9.7.0"
+
   }
 }
