--- a/client-service/package.json
+++ b/client-service/package.json
@@ -21,18 +21,18 @@
     "globals": "^16.2.0",
     "jest": "^30.0.2",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.0.0",
     "prisma": "^6.10.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1",
-    "pino-pretty": "^13.0.0"
+    "typescript-eslint": "^8.34.1"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
     "fastify": "^5.4.0",
+    "http-status-codes": "^2.3.0",
     "pino": "^9.7.0"
-
   }
 }
