--- a/client-service/package.json
+++ b/client-service/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "@types/amqplib": "^0.10.7",
+    "amqplib": "^0.10.8",
     "fastify": "^5.4.0",
     "http-status-codes": "^2.3.0",
     "pino": "^9.7.0"
